--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,7 @@ root = true
 	insert_final_newline = true
 	trim_trailing_whitespace = true
 	indent_style = tab
+	indent_size = 4
 
 [{.jshintrc,*.json,*.yml}]
 	indent_style = space
