--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ php:
   - hhvm
   - nightly
 before_script:
-  - if find ./ -name '*.php' -exec php -l {} \; | grep "syntax error, unexpected"; then exit 1; fi
+  - if find ./ -name "*.php" -exec php -l {} \; | grep "syntax error, unexpected"; then exit 1; fi
