--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ php:
   - '7.0'
   - hhvm
   - nightly
-before_script:
+script:
   - if find ./ -name "*.php" -exec php -l {} \; | grep "syntax error, unexpected"; then exit 1; fi
